@@ -47,7 +47,7 @@ jargon.get.buffer.size=4194304
 jargon.reconnect=false
 # if jargon.reconnect is true, this is the time in milliseconds before restarting, default is 10 minutes
 jargon.reconnect.time.in.millis=600000
-# turns on detailed instrumentation code which will be reported in the DEBUG log. Production of this data will be implemented over time
+# turns on detailed instrumentation code which will be reported via perf4j logging.  This is being incrementally added over time
 jargon.instrument=false
 
 #------------------
