@@ -34,6 +34,7 @@ import org.irods.jargon.testutils.icommandinvoke.icommands.ImetaRemoveCommand;
 import org.irods.jargon.testutils.icommandinvoke.icommands.ImkdirCommand;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
+import org.junit.Ignore;
 import org.junit.Test;
 
 public class CollectionAOImplTest {
@@ -1209,6 +1210,46 @@ public class CollectionAOImplTest {
 	@Test
 	public void findByAbsolutePath() throws Exception {
 		String testDirName = "findByAbsolutePath";
+
+		String targetIrodsCollection = testingPropertiesHelper
+				.buildIRODSCollectionAbsolutePathFromTestProperties(
+						testingProperties, IRODS_TEST_SUBDIR_PATH + '/'
+								+ testDirName);
+
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+		IRODSAccessObjectFactory accessObjectFactory = irodsFileSystem
+				.getIRODSAccessObjectFactory();
+		
+		IRODSFile collFile = accessObjectFactory.getIRODSFileFactory(irodsAccount).instanceIRODSFile(targetIrodsCollection);
+		collFile.mkdirs();
+
+		CollectionAO collectionAO = accessObjectFactory
+				.getCollectionAO(irodsAccount);
+		Collection collection = collectionAO
+				.findByAbsolutePath(targetIrodsCollection);
+
+		Assert.assertNotNull("did not find the collection, was null",
+				collection);
+		Assert.assertEquals("should be normal coll type", SpecColType.NORMAL,
+				collection.getSpecColType());
+		Assert.assertEquals("absPath should be same as requested path",
+				targetIrodsCollection, collection.getCollectionName());
+		Assert.assertEquals("collection Name should be same as requested path",
+				targetIrodsCollection, collection.getCollectionName());
+	}
+	
+	/**
+	 * Bug [#1139] Spaces at the begin or end of a data object name will cause
+	 * an exception
+	 * 
+	 * ignored for now as it apears that getting an objStat from iRODS has an issue, see bug notes
+	 * 
+	 * @throws Exception
+	 */
+	@Ignore
+	public void findByAbsolutePathSpacesInNameBug1139() throws Exception {
+		String testDirName = " findByAbsolutePath ";
 
 		String targetIrodsCollection = testingPropertiesHelper
 				.buildIRODSCollectionAbsolutePathFromTestProperties(
